--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,16 @@
       <title>Kit's blog</title>
     </head>
     <body>
-      <p>Hi there!</p>
-      <p>It works!</p>
+      <div>
+        <h1><a href="/">Kit's blog</a></h1>
+      </div>
+
+      {% for post in posts %}
+      <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text |linebreaks}}</p>
+      </div>
+    {% endfor %}
     </body)
 </html>
