--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,12 @@
-<html>
-    <head>
-      <title>Kit's blog</title>
-    </head>
-    <body>
-      <div>
-        <h1><a href="/">Kit's blog</a></h1>
-      </div>
-
-      {% for post in posts %}
-      <div>
-        <p>published: {{ post.published_date }}</p>
+{% extends "blog/base.html" %}
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
+        </div>
         <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text |linebreaks}}</p>
-      </div>
-    {% endfor %}
-    </body)
-</html>
+        <p>{{ post.text|linebreaks }}</p>
+    </div>
+{% endfor %}
+{% endblock content %}
